@@ -39,7 +39,9 @@
 <blockquote>
 <ul class="simple">
 <li>coders/logo.c (ReadLOGOImage): PATTERN error handling was
-incomplete.  Add appropriate error handling.</li>
+incomplete.  Add appropriate error handling.
+(ReadLOGOImage): Switch to using ConstituteTextureImage() rather
+than TextureImage() since it is more appropriate for this purpose.</li>
 </ul>
 </blockquote>
 <p>2020-01-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
